--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <header-padrao color_top="#3084B4" color_button="#DA251C"></header-padrao>
     <nav>
-        <a href="./pages/alunoIndex.html">ALUNOS</a>
+        <a href="/pages/aluno/aluno.html">ALUNOS</a>
         <a href="./pages/professor.html">PROFESSORES</a>
     </nav>
 </body>
