--- a/pages/aluno/horario.html
+++ b/pages/aluno/horario.html
@@ -45,8 +45,10 @@
         </ul>
     </nav>
     <main id="root_aluno">
+       
          <div class="container container-horario" id="container-horario">
     <div class="container_topo">
+        <a href="/pages/aluno/relatorio.html" class="linkCriterioTarefa">Critérios da Tarefa</a>
         <div class="nome_buttons">
             <p>Horário</p>
 
