--- a/pages/aluno/relatorio.html
+++ b/pages/aluno/relatorio.html
@@ -47,7 +47,7 @@
     <main id="root_aluno">
         <div class="container container-relatorio" id="container-relatorio">
             <div class="container_topo">
-                <a href="/horario"  class="linkHorario">Horário</a>
+                <a href="/pages/aluno/horario.html"  class="linkHorario">Horário</a>
                 <div class="nome_buttons">
                     <p>Relatório</p>
                 </div>
