--- a/pages/professor/cursos.html
+++ b/pages/professor/cursos.html
@@ -17,13 +17,13 @@
     <script src="https://kit.fontawesome.com/30058942d9.js" crossorigin="anonymous"></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/professor/cursos.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/professor/cursos.css">
 
 
     <!-- COMPONENTS -->
-    <script src="../components/header.js" defer type="module"></script>
-    <script src="../components/nav.js" defer type="module"></script>
+    <script src="/components/header.js" defer type="module"></script>
+    <script src="/components/nav.js" defer type="module"></script>
 
     <!-- <script src="../js/cursos.js" defer type="module"></script> -->
     <!-- <script src="../js/professorCRUD/modal_cursos.js" defer type="module"></script> -->
