--- a/pages/professor/professor.html
+++ b/pages/professor/professor.html
@@ -17,12 +17,12 @@
     <script src="https://kit.fontawesome.com/30058942d9.js" crossorigin="anonymous"></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/professor/professor.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/professor/professor.css">
 
     <!-- COMPONENTS -->
-    <script src="../components/header.js" defer type="module"></script>
-    <script src="../components/nav.js" defer type="module"></script>
+    <script src="/components/header.js" defer type="module"></script>
+    <script src="/components/nav.js" defer type="module"></script>
 
 
 
