--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header-padrao color_top="#3084B4" color_button="#DA251C"></header-padrao>
     <nav>
         <a href="/pages/aluno/aluno.html">ALUNOS</a>
-        <a href="./pages/professor.html">PROFESSORES</a>
+        <a href="/pages/professor/professor.html">PROFESSORES</a>
     </nav>
 </body>
 
