--- a/pages/professor/turmas.html
+++ b/pages/professor/turmas.html
@@ -12,7 +12,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/aluno/reset.css">
-    <link rel="stylesheet" href="/css/aluno/aluno.css">
+    <link rel="stylesheet" href="/css/aluno/professor.css">
 
 
     <!-- COMPONENTS -->
@@ -51,7 +51,7 @@
                 <div class="linha"></div>
             </div>  
             <div class="cards_turma_professor">
-        
+                
             </div>  
         </div>
     </main>
