--- a/pages/professor/tarefas.html
+++ b/pages/professor/tarefas.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="https://kit.fontawesome.com/30058942d9.js" crossorigin="anonymous"></script>
+    <!-- CSS -->
+    <link rel="stylesheet" href="/css/aluno/reset.css">
+    <link rel="stylesheet" href="/css/aluno/professor.css">
+    <link rel="stylesheet" href="/css/aluno/aluno.css">
+
+    <script src="/components/header.js" defer type="module"></script>
+    <script src="/components/nav.js" defer type="module"></script>
     <title>Document</title>
 </head>
+
 <body>
-    <main>oi</main>
+    <header-padrao color_top="#3084B4" color_button="#DA251C" text_button="VOLTAR"
+        link_button="../index.html"></header-padrao>
+    <nav-professor></nav-professor>
+    <main id="root_aluno">
+        <div class="container container-tarefas" id="container-tarefas">
+            <div class="container_topo">
+                <div class="nome_buttons">
+                    <p id="nomeTurma">Tarefas da turma de tal</p>
+                    <div class="adicionar_editar_deletar">
+                        <button class="fas fa-plus" id="adicionarTarefa"></button>
+                    </div>
+                </div>
+                <div class="linha"></div>
+                <div class="card_tarefas_turma">
+                    <div class="card_tarefa" id="1">
+
+                    </div>
+                </div>
+            </div>
+    </main>
 </body>
+
 </html>
