--- a/pages/professor/tarefas.html
+++ b/pages/professor/tarefas.html
@@ -43,7 +43,7 @@
     </main>
     <div id="modal__adicionar__tarefa" class="modal__adicionar__tarefa d-none">
         <form  id="adcTarefa">
-            <div class="titleForm">
+            <div class="titleForm d-flex font-family-Montserrat">
                 <h3>Adicione uma tarefa</h3>
                 <button id="sair">Sair</button>
             </div>
