iniciando upload img

--- a/pages/professor/tarefas.html
+++ b/pages/professor/tarefas.html
@@ -47,8 +47,17 @@
                 <h3>Adicione uma tarefa</h3>
                 <button id="sair">Sair</button>
             </div>
+            <div class="inputsTarefa d-flex flex-column">
+                <input type="text" placeholder="Digite o nome da tarefa" required>
+                <textarea name="" id="" cols="30" rows="10" placeholder="Descrição tarefa"></textarea>
+                <div class="imgTarefa">
+                    <input type="file" id="imagem" name="imagem">
+                    <div id="visualizacao"></div>
+                  </div>
+                  
+
+            </div>
         </form>
-     
     </div>
 </body>
 
