--- a/pages/professor/tarefas.html
+++ b/pages/professor/tarefas.html
@@ -52,7 +52,9 @@
                 <textarea name="" id="" cols="30" rows="10" placeholder="Descrição tarefa"></textarea>
                 <div class="imgTarefa">
                     <input type="file" id="imagem" name="imagem">
-                    <div id="visualizacao"></div>
+                    <div id="visualizacao">
+                        <img id="imgVisu">
+                    </div>
                   </div>
                   
 
