--- a/pages/professor/tarefas.html
+++ b/pages/professor/tarefas.html
@@ -50,12 +50,12 @@
             <div class="inputsTarefa d-flex flex-column">
                 <input type="text" placeholder="Digite o nome da tarefa" required>
                 <textarea name="" id="" cols="30" rows="10" placeholder="Descrição tarefa"></textarea>
-                <div class="imgTarefa">
+                <!-- <div class="imgTarefa">
                     <input type="file" id="imagem" name="imagem">
                     <div id="visualizacao">
                         <img id="imgVisu">
                     </div>
-                  </div>
+                  </div> -->
                   
 
             </div>
