--- a/pages/aluno/relatorio.html
+++ b/pages/aluno/relatorio.html
@@ -22,7 +22,7 @@
 <script src="../js/areaAluno.js" defer type="module"></script>
 <script src="../js/relatorio.js" defer type="module"></script> -->
 
-    <script src="/js/adicionar.js" defer type="module"></script>
+    <script src="/js/relatorio.js" defer type="module"></script>
 
 
     <title>Document</title>
