--- a/pages/aluno/materia.html
+++ b/pages/aluno/materia.html
@@ -17,6 +17,7 @@
 
     <!-- COMPONENTS -->
     <script src="/components/header.js" defer type="module"></script>
+    <script src="/js/materias.js" defer type="module"></script>
 
     <!-- <script src="../js/materia.js" defer type="module"></script>
 <script src="../js/areaAluno.js" defer type="module"></script>
@@ -43,13 +44,18 @@
         </ul>
     </nav>
     <main id="root_aluno">
-        <div class="container container-materia" id="container-materia">
+        <div class="container container-areaAluno" id="container-areaAluno">
             <div class="container_topo">
                 <p>Matéria</p>
                 <div class="linha"></div>
+                <div class="cards_turma">
+
+                </div> 
             </div>
         </div>
+
     </main>
+
 </body>
 
 </html>
