--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="./components/header.js" defer type="module"></script>
 
     <!-- APP -->
-    <script src="../js/app.js" defer type="module"></script>
+
 
     <title>HOME</title>
 </head>
@@ -31,7 +31,7 @@
     <header-padrao color_top="#3084B4" color_button="#DA251C"></header-padrao>
     <nav>
         <a href="/pages/aluno/aluno.html">ALUNOS</a>
-        <a href="./pages/professor.html">PROFESSORES</a>
+        <a href="/pages/professor/professor.html">PROFESSORES</a>
     </nav>
 </body>
 
