--- a/pages/professor/tarefas.html
+++ b/pages/professor/tarefas.html
@@ -52,6 +52,8 @@
             <div class="inputsTarefa d-flex flex-column">
                 <input type="text" placeholder="Digite o nome da tarefa" required>
                 <input type="text" placeholder="Digite a URL de uma imagem" required>
+                <label for="tempoPrevisto">Digite o tempo previsto:</label>
+                <input type="time" id="tempoPrevisto">
                 <textarea name="" id="" placeholder="Descrição tarefa"></textarea>
                 <!-- <div class="imgTarefa">
                     <input type="file" id="imagem" name="imagem">
