--- a/pages/professor/tarefas.html
+++ b/pages/professor/tarefas.html
@@ -49,8 +49,8 @@
                 <h3>Adicione uma tarefa</h3>
             </div>
             <div class="inputsTarefa d-flex flex-column">
-                <input type="text" placeholder="Digite o nome da tarefa" required id="nomeTarefa">
-                <input type="text" placeholder="Digite a URL de uma imagem" required id="urlTarefa">
+                <input type="text" placeholder="Digite o nome da tarefa"  id="nomeTarefa">
+                <input type="text" placeholder="Digite a URL de uma imagem" id="urlTarefa">
                 <label for="tempoPrevisto">Digite o tempo previsto:</label>
                 <input type="time" id="tempoPrevisto">
                 <textarea name=""  placeholder="Descrição tarefa" id="descricaoTarefa"></textarea>
