alterações em tarefas

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <!-- LINK DO GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
