dados da tarefa

--- a/pages/professor/tarefas.html
+++ b/pages/professor/tarefas.html
@@ -81,10 +81,10 @@
                 <h3>Edite uma tarefa</h3>
             </div>
             <div class="inputsTarefa d-flex flex-column">
-                <input type="text" placeholder="Digite o nome da tarefa"  id="nomeTarefa">
-                <input type="text" placeholder="Digite a URL de uma imagem" id="urlTarefa">
+                <input type="text" placeholder="Digite o nome da tarefa"  id="nomeTarefa2">
+                <input type="text" placeholder="Digite a URL de uma imagem" id="urlTarefa2">
                 <label for="tempoPrevisto">Digite o tempo previsto:</label>
-                <input type="time" id="tempoPrevisto">
+                <input type="time" id="tempoPrevisto2">
                 <!-- <textarea name=""  placeholder="Descrição tarefa" id="descricaoTarefa"></textarea> -->
                 <!-- <div class="imgTarefa">
                     <input type="file" id="imagem" name="imagem">
@@ -94,7 +94,7 @@
                   </div> -->
                   <div class="containerTipoAtividade font-family-Montserrat">
                     <label for="tipo-atividade">Tipo de Atividade:</label>
-                    <select id="tipo-atividade">
+                    <select id="tipo-atividade2">
                         <option value="na"></option>
                       <option value="Somativa">Somativa</option>
                       <option value="Formativa">Formativa</option>
