--- a/pages/professor/tarefas.html
+++ b/pages/professor/tarefas.html
@@ -64,8 +64,8 @@
                     <label for="tipo-atividade">Tipo de Atividade:</label>
                     <select id="tipo-atividade">
                         <option value="na"></option>
-                      <option value="Somativa">Somativa</option>
-                      <option value="Formativa">Formativa</option>
+                      <option value="2">Somativa</option>
+                      <option value="1">Formativa</option>
                     </select>
                   </div>
                   <button id="sendTarefa">Send</button>
@@ -95,9 +95,8 @@
                   <div class="containerTipoAtividade font-family-Montserrat">
                     <label for="tipo-atividade">Tipo de Atividade:</label>
                     <select id="tipo-atividade2">
-                        <option value="na"></option>
-                      <option value="Somativa">Somativa</option>
-                      <option value="Formativa">Formativa</option>
+                      <option value="2">Somativa</option>
+                      <option value="1">Formativa</option>
                     </select>
                   </div>
                   <button id="sendTarefaEditada">Send</button>
