--- a/pages/professor/cursos.html
+++ b/pages/professor/cursos.html
@@ -26,8 +26,8 @@
     <script src="/components/header.js" defer type="module"></script>
     <script src="/components/nav.js" defer type="module"></script>
 
-    <!-- <script src="../js/cursos.js" defer type="module"></script> -->
-    <!-- <script src="../js/professorCRUD/modal_cursos.js" defer type="module"></script> -->
+    <script src="../../js/cursos.js" defer type="module"></script>
+    <script src="../../js/professorCRUD/modal_cursos.js" defer type="module"></script>
     <!-- <script src="../js/app.js" defer type="module"></script> -->
 </head>
 
