--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-    <header-padrao color_top="#3084B4" color_button="#DA251C"></header-padrao>
+    <header-padrao color_top="#3084B4" color_button="#DA251C" text_button = 'LOGIN' link_button = './pages/login/login.html'></header-padrao>
     <nav>
         <a href="/pages/aluno/aluno.html">ALUNOS</a>
         <a href="/pages/professor/professor.html">PROFESSORES</a>
