--- a/pages/professor/tarefas.html
+++ b/pages/professor/tarefas.html
@@ -45,7 +45,7 @@
                         <div class="modal_mensagem d-none">
                             <p id="nomeTarefaMensagem">Deseja ver os critérios da tarefa</p>
                             <div class="botoes">
-                                <a><button>Sim</button></a>
+                                <a href="./criterios.html"><button>Sim</button></a>
                                 <button id="sairModalMensagem">Não</button>
                             </div>
 
@@ -70,7 +70,7 @@
                 <input type="text" placeholder="Digite a URL de uma imagem" id="urlTarefa">
                 <label for="tempoPrevisto">Digite o tempo previsto:</label>
                 <input type="time" id="tempoPrevisto">
-                <!-- <textarea name=""  placeholder="Descrição tarefa" id="descricaoTarefa"></textarea> -->
+                <textarea name=""  placeholder="Descrição tarefa" id="descricaoTarefa"></textarea>
                 <!-- <div class="imgTarefa">
                     <input type="file" id="imagem" name="imagem">
                     <div id="visualizacao">
@@ -103,7 +103,7 @@
                 <input type="text" placeholder="Digite a URL de uma imagem" id="urlTarefa2">
                 <label for="tempoPrevisto">Digite o tempo previsto:</label>
                 <input type="time" id="tempoPrevisto2">
-                <!-- <textarea name=""  placeholder="Descrição tarefa" id="descricaoTarefa"></textarea> -->
+                <textarea name=""  placeholder="Descrição tarefa" id="descricaoTarefa2"></textarea>
                 <!-- <div class="imgTarefa">
                     <input type="file" id="imagem" name="imagem">
                     <div id="visualizacao">
