Formatando Lista de Professores

--- a/pages/adm/cursos.html
+++ b/pages/adm/cursos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../css/adm/administrador_cursos.css">
 
     <script src="../../components/header.js"></script>
-    <script src="../../js/administrador.js" type="module" defer></script>
+   
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -89,7 +89,7 @@
                 <div class="containerCursos__containerTabela">
                     <table>
                        
-                        <tbody id="tabelaItems">
+                        <tbody id="tabelaItemsCursos">
 
                            
                             <tr>
