Formatando lista de Alunos

--- a/pages/adm/administrador.html
+++ b/pages/adm/administrador.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jaldi&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,300&display=swap" rel="stylesheet">
 
-    <title>ADMINISTRADOR</title>
+    <title>ADMINISTRADOR - Professores</title>
 </head>
 <body>
     <header-padrao color_button = '#DA251C' color_top = '#3084B4' text_button = 'SAIR' link_button = '../../index.html'>
