modificado os cards de cursos e modificado o nav do professor

--- a/pages/professor/professor.html
+++ b/pages/professor/professor.html
@@ -32,7 +32,12 @@
         link_button="../index.html"></header-padrao>
 
     <!-- NAV PRINCIPAL -->
-    <nav-professor></nav-professor>
+    <nav-professor 
+        nome1="Cursos" link1="/pages/professor/cursos.html"
+        nome2="Turmas" link2="/pages/professor/turmas.html"
+        nome3="Disciplinas" link3="/pages/professor/disciplinas.html"
+        nome4="Alunos" link4="/pages/professor/alunos.html">
+    </nav-professor>
 </body>
 
 
