--- a/pages/professor/tarefas.html
+++ b/pages/professor/tarefas.html
@@ -31,7 +31,15 @@
 <body>
     <header-padrao color_top="#3084B4" color_button="#DA251C" text_button="VOLTAR"
         link_button="../index.html"></header-padrao>
-    <nav-professor></nav-professor>
+        
+    <!-- NAV PRINCIPAL -->
+    <nav-professor 
+        nome1="Cursos" link1="/pages/professor/cursos.html"
+        nome2="Turmas" link2="/pages/professor/turmas.html"
+        nome3="Disciplinas" link3="/pages/professor/disciplinas.html"
+        nome4="Alunos" link4="/pages/professor/alunos.html">
+    </nav-professor>
+
     <main id="root_aluno">
         <div class="container container-tarefas" id="container-tarefas">
             <div class="container_topo">
