--- a/pages/professor/cursos.html
+++ b/pages/professor/cursos.html
@@ -27,7 +27,7 @@
     <script src="/components/nav.js" defer type="module"></script>
 
     <script src="../../js/cursos.js" defer type="module"></script>
-    <!-- <script src="../js/app.js" defer type="module"></script> -->
+    
 </head>
 
 <body>
@@ -36,8 +36,14 @@
         link_button="../index.html"></header-padrao>
 
     <!-- NAV PRINCIPAL -->
-    <nav-professor></nav-professor>
-    <main id="root_aluno">
+    <nav-professor 
+        nome1="Cursos" link1="/pages/professor/cursos.html"
+        nome2="Turmas" link2="/pages/professor/turmas.html"
+        nome3="Disciplinas" link3="/pages/professor/disciplinas.html"
+        nome4="Alunos" link4="/pages/professor/alunos.html">
+    </nav-professor>
+
+    <main id="root_professor">
         <div class="container container-cursos" id="container-cursos">
             <div class="container_topo">
                 <div class="nome_buttons">
