--- a/pages/adm/cursos.html
+++ b/pages/adm/cursos.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="../../css/adm/administrador_cursos.css">
 
   <script src="../../components/header.js"></script>
-  <script src="../../js/administrador.js" type="module" defer></script>
 
   <!-- Link do FontAwesome -->
   <script src="https://kit.fontawesome.com/30058942d9.js" crossorigin="anonymous"></script>
@@ -146,7 +145,7 @@
       <!-- MODAL DELETAR CURSOS -->
       <div class="modal__deletar" id="modal__deletar">
         <div class="modal__deletar--content" id="modal__deletar--content">
-          <p class="nome__modal">Deseja mesmo Deletar?</p>
+          <p class="nome__modal--deletar">Deseja mesmo Deletar?</p>
           <div class="modal__deletar--footer">
             <a type="submit" id="naoDeletar" href="#">Não</a>
             <a type="submit" id="Deletar" href="#">Sim</a>
@@ -172,7 +171,7 @@
               </span>
 
             </div>
-            <tbody id="tabelaItems" class="tabelaItems">
+            <tbody id="tabelaItemsCursos" class="tabelaItemsCursos">
               <!-- ONDE VAI FICAR AS TABELAS -->
             </tbody>
           </table>
