começando a fazer os modal's da matéria funcionar

--- a/pages/adm/materias.html
+++ b/pages/adm/materias.html
@@ -22,7 +22,7 @@
     <title>MATERIAS</title>
 
     <script src="../../js/adm_materia.js" defer type="module"></script>
-  <!-- <script src="../../js/admCRUD/modal_cursos.js" defer type="module"></script> -->
+    <script src="../../js/admCRUD/modal_materia.js" defer type="module"></script>
 </head>
 
 <body>
