--- a/pages/professor/tarefas.html
+++ b/pages/professor/tarefas.html
@@ -15,7 +15,7 @@
 
     <script src="https://kit.fontawesome.com/30058942d9.js" crossorigin="anonymous"></script>
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/aluno/reset.css">
+
     <link rel="stylesheet" href="/css/professor/professor.css">
     <link rel="stylesheet" href="/css/aluno/aluno.css">
     <link rel="stylesheet" href="/css/reset.css">
@@ -31,15 +31,7 @@
 <body>
     <header-padrao color_top="#3084B4" color_button="#DA251C" text_button="VOLTAR"
         link_button="../index.html"></header-padrao>
-        
-    <!-- NAV PRINCIPAL -->
-    <nav-professor 
-        nome1="Cursos" link1="/pages/professor/cursos.html"
-        nome2="Turmas" link2="/pages/professor/turmas.html"
-        nome3="Disciplinas" link3="/pages/professor/disciplinas.html"
-        nome4="Alunos" link4="/pages/professor/alunos.html">
-    </nav-professor>
-
+    <nav-professor></nav-professor>
     <main id="root_aluno">
         <div class="container container-tarefas" id="container-tarefas">
             <div class="container_topo">
@@ -61,8 +53,8 @@
 
                         <div class="buttoesFuncoes">
                             <button id="excluirTarefaButton">Excluir</button>
-                            <button>Editar</button>
-                            <button>Ir para critérios</button>
+                            <button id="editarTarefaButton">Editar</button>
+                            <a href="./criterios.html"><button>Ir para critérios</button></a>
                         </div>
                         <!-- <p id="nomeTarefaMensagem">Deseja ver os critérios da tarefa</p>
                             <div class="botoes">
@@ -70,7 +62,7 @@
                                 <button id="sairModalMensagem">Não</button>
                             </div> -->
 
-                        <div class="modal_excluir">
+                        <div class="modal_excluir d-none">
                             <h3>Aviso!</h3>
                             <span>
                                 <p>Ao confirmar a exclusão, esta ação não poderá ser desfeita.</p>
@@ -88,17 +80,6 @@
 
         </div>
 
-        <!-- <div class="modal__deletar d-none" id="modal__deletar">
-                <div class="modal__deletar--content" id="modal__deletar--content">
-                    <p>Deseja mesmo Deletar?</p>
-                    <div class="modal__deletar--footer">
-                        <a type="submit" id="naoDeletar" href="#">Não</a>
-                        <a type="submit" id="Deletar" href="#">Sim</a>
-                    </div>
-                    <a href="#" class="modal__deletar--close" id="sair">&times;</a>
-                </div>
-            </div> -->
-
     </main>
 
     <div id="modal__adicionar__tarefa" class="modal__adicionar__tarefa d-none">
@@ -114,12 +95,6 @@
                 <label for="tempoPrevisto">Digite o tempo previsto:</label>
                 <input type="time" id="tempoPrevisto">
                 <textarea name="" placeholder="Descrição tarefa" id="descricaoTarefa"></textarea>
-                <!-- <div class="imgTarefa">
-                    <input type="file" id="imagem" name="imagem">
-                    <div id="visualizacao">
-                        <img id="imgVisu">
-                    </div>
-                  </div> -->
                 <div class="containerTipoAtividade font-family-Montserrat">
                     <label for="tipo-atividade">Tipo de Atividade:</label>
                     <select id="tipo-atividade">
