Alterando Icones das listas

--- a/pages/adm/administrador.html
+++ b/pages/adm/administrador.html
@@ -9,6 +9,7 @@
 
     <script src="../../components/header.js"></script>
     <script src="../../js/administrador.js" type="module" defer></script>
+    <script src="https://kit.fontawesome.com/30058942d9.js" crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
