--- a/pages/adm/alunos.html
+++ b/pages/adm/alunos.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="../../css/adm/administrador_alunos.css">
 
     <script src="../../components/header.js"></script>
-    <script src="../../js/administradorAlunos.js" type="module" defer></script>
+    <script src="../../js/adm_alunos.js" type="module" defer></script>
+    <script src="https://kit.fontawesome.com/30058942d9.js" crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
