--- a/pages/professor/disciplinas.html
+++ b/pages/professor/disciplinas.html
@@ -19,6 +19,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/css/aluno/reset.css">
     <link rel="stylesheet" href="/css/aluno/professor.css">
+    <link rel="stylesheet" href="/css/professor/disciplina.css">
 
 
     <!-- COMPONENTS -->
@@ -26,11 +27,6 @@
     <script src="/components/nav.js" defer type="module"></script>
 
 
-    <script src="/js/horario.js" defer type="module"></script>
-    <script src="/js/tarefas.js" defer type="module"></script>
-    <script src="/js/app.js" defer type="module"></script>
-    <script src="/js/adicionar.js" defer type="module"></script>
-    <script src="/js/relatorio.js" defer type="module"></script>
 
     <title>DISCIPINAS</title>
 </head>
@@ -52,8 +48,38 @@
                 <p>Lista de Disciplinas</p>
                 <div class="linha"></div>
             </div>  
-            <div class="cards_turma_professor">
-                
+            <div class="cards_discipinas_professor">
+                <a href="#" class="card_disciplina">
+                    <h3 class="nome_disciplina">PWBE</h3>
+                    <p class="descricao_disciplina">Programação web back end, desenvolvida para aprender back end</p>
+                    <span class="horario"><i class="fa-solid fa-clock"></i>200h</span>
+                </a>
+                <a href="#" class="card_disciplina">
+                    <h3 class="nome_disciplina">PWBE</h3>
+                    <p class="descricao_disciplina">Programação web back end, desenvolvida para aprender back end</p>
+                    <span class="horario"><i class="fa-solid fa-clock"></i>200h</span>
+                </a>
+                <a href="#" class="card_disciplina">
+                    <h3 class="nome_disciplina">PWBE</h3>
+                    <p class="descricao_disciplina">Programação web back end, desenvolvida para aprender back end</p>
+                    <span class="horario"><i class="fa-solid fa-clock"></i>200h</span>
+                </a>
+                <a href="#" class="card_disciplina">
+                    <h3 class="nome_disciplina">PWBE</h3>
+                    <p class="descricao_disciplina">Programação web back end, desenvolvida para aprender back end</p>
+                    <span class="horario"><i class="fa-solid fa-clock"></i>200h</span>
+                </a>
+                <a href="#" class="card_disciplina">
+                    <h3 class="nome_disciplina">PWBE</h3>
+                    <p class="descricao_disciplina">Programação web back end, desenvolvida para aprender back end</p>
+                    <span class="horario"><i class="fa-solid fa-clock"></i>200h</span>
+                </a>
+                <a href="#" class="card_disciplina">
+                    <h3 class="nome_disciplina">PWBE</h3>
+                    <p class="descricao_disciplina">Programação web back end, desenvolvida para aprender back end</p>
+                    <span class="horario"><i class="fa-solid fa-clock"></i>200h</span>
+                </a>
+
             </div>  
         </div>
     </main>
