modificando o modal de materia do adm

--- a/pages/adm/materias.html
+++ b/pages/adm/materias.html
@@ -99,6 +99,17 @@
                         <label for="">Descrição:</label>
                         <textarea tabindex="5" id="myInputDescricao" required></textarea>
                     </div>
+                    <div class="dropdownCurso">
+                        <div class="adicionar--curso">
+                            <label for="materias_cursos">Está matéria é de qual curso?</label>
+                            <a href="" class="fas fa-plus"></a>
+                        </div>
+                        <select id="materias_cursos" name="cursos">
+                            <option value="desenvolvimentoDeSistemas">desenvolvimento de sistemas</option>
+                            <option value="redesDeComputadores">redes de computadores</option>
+                            <option value="eletroeletronica">eletroeletronica</option>
+                        </select>
+                    </div>
                     <div class="modal__adicionar--footer">
                         <a type="submit" id="salvarBtn">Salvar</a>
                     </div>
