inicio multiple select

--- a/pages/adm/materias.html
+++ b/pages/adm/materias.html
@@ -102,12 +102,12 @@
                     <div class="dropdownCurso">
                         <div class="adicionar--curso">
                             <label for="materias_cursos">Está matéria é de qual curso?</label>
-                            <a href="" class="fas fa-plus"></a>
+                           <button type="button" id="buttonAdicionarNovaMateria"><i class="fas fa-plus"></i></button> 
                         </div>
                         <select id="materias_cursos" name="cursos">
-                            <option value="desenvolvimentoDeSistemas">desenvolvimento de sistemas</option>
+                            <!-- <option value="desenvolvimentoDeSistemas">desenvolvimento de sistemas</option>
                             <option value="redesDeComputadores">redes de computadores</option>
-                            <option value="eletroeletronica">eletroeletronica</option>
+                            <option value="eletroeletronica">eletroeletronica</option> -->
                         </select>
                     </div>
                     <div class="modal__adicionar--footer">
