--- a/pages/adm/alunos.html
+++ b/pages/adm/alunos.html
@@ -17,7 +17,7 @@
     <title>ADMINISTRADOR - Alunos</title>
 </head>
 <body>
-    <header-padrao color_button = '#DA251C' color_top = '#3084B4' text_button = 'SAIR' link_button = '../../index.html'>
+    <header-padrao color_button = '#DA251C' color_top = '#3084B4' text_button="VOLTAR" link_button = '../../index.html'>
         
     </header-padrao>
 
