--- a/pages/adm/materias.html
+++ b/pages/adm/materias.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <header-padrao color_button='#DA251C' color_top='#3084B4'></header-padrao>
+    <header-padrao color_button='#DA251C' color_top='#3084B4' text_button="VOLTAR"></header-padrao>
 
     <section class="containerTitulo containerTitulo--displayFlex">
         <a class="fa-solid fa-bars containerTitulo--icon" href="#menu--bar"></a>
