--- a/pages/adm/materias.html
+++ b/pages/adm/materias.html
@@ -69,7 +69,7 @@
                     GERENCIAR MATÉRIAS
                 </h2>
                 <input type="text" class="menuSuperior__inputCursos menuSuperior__inputCursos--format"
-                    id="pesquisaCursos" placeholder=" Pesquise por um Curso...">
+                    id="pesquisaCursos" placeholder=" Pesquise por uma Matéria...">
                 <div class="menuSuperior__containerLinks">
                     <ul class="containerLinks__listaLinks containerLinks__listaLinks--displayFlex">
                         <a class="fas fa-plus" href="#modal__adicionar"></a>
